--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ pycodestyle==2.5.0
 pyflakes==2.1.1
 Pygments==2.6.1
 python-dateutil==2.8.1
+python-memcached==1.59
 pytz==2020.1
 requests==2.23.0
 six==1.14.0
