--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 decorator==4.4.2
 Django==2.2.12
+django-crispy-forms==1.9.2
 django-extensions==2.2.9
 django-silk==4.0.1
 entrypoints==0.3
